--- a/src/StbTrueTypeSharp.csproj
+++ b/src/StbTrueTypeSharp.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Authors>StbTrueTypeSharpTeam</Authors>
     <Product>StbTrueTypeSharp</Product>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1</TargetFrameworks>
     <Description>C# port of stb_truetype.h</Description>
     <PackageLicense>https://github.com/rds1983/StbSharp#license</PackageLicense>
     <PackageProjectUrl>https://github.com/rds1983/StbSharp</PackageProjectUrl>
@@ -13,6 +13,6 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 </Project>
