Change project to go into Monogame monorepo

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -14,9 +14,11 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.1.x'
+        dotnet-version: '5.0.x'
     - name: Build StbTrueTypeSharp
       run: dotnet build src\StbTrueTypeSharp.csproj --configuration Release
+    - name: Test
+      run: dotnet test StbTrueTypeSharp.sln
     - name: Install NuGet
       uses: NuGet/setup-nuget@v1
     - name: Publish StbTrueTypeSharp to NuGet
