--- a/StbTrueTypeSharp.csproj
+++ b/StbTrueTypeSharp.csproj
@@ -2,17 +2,18 @@
   <PropertyGroup>
     <Authors>StbTrueTypeSharpTeam</Authors>
     <Product>StbTrueTypeSharp</Product>
-    <TargetFrameworks>netstandard2.1</TargetFrameworks>
+	<EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
     <Description>C# port of stb_truetype.h</Description>
     <PackageLicense>https://github.com/rds1983/StbSharp#license</PackageLicense>
     <PackageProjectUrl>https://github.com/rds1983/StbSharp</PackageProjectUrl>
-    <NoWarn>NU1701</NoWarn>
-    <AssemblyName>StbTrueTypeSharp</AssemblyName>
-    <RootNamespace>StbTrueTypeSharp</RootNamespace>
-    <Version>1.24.7</Version>
+    <Version>1.24.8</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
+ <ItemGroup>
+    <Compile Include="src\*.cs" /> 
+</ItemGroup>
 </Project>
