--- a/src/StbTrueTypeSharp.csproj
+++ b/src/StbTrueTypeSharp.csproj
@@ -2,12 +2,14 @@
   <PropertyGroup>
     <Authors>StbTrueTypeSharpTeam</Authors>
     <Product>StbTrueTypeSharp</Product>
-	<EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+	<OutputType>Library</OutputType>
     <TargetFrameworks>net6.0-windows</TargetFrameworks>
     <Description>C# port of stb_truetype.h</Description>
     <PackageLicense>https://github.com/rds1983/StbSharp#license</PackageLicense>
     <PackageProjectUrl>https://github.com/rds1983/StbSharp</PackageProjectUrl>
     <Version>1.26.9</Version>
+	<AssemblyName>StbTrueTypeSharp</AssemblyName>
+    <RootNamespace>StbTrueTypeSharp</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
